...

//A view controller for searching kitsu
class SearchViewController: UIViewController {
    
    enum Scope: String {
        case anime = "Anime"
        case manga = "Manga"
        static let all: [Scope] = [.anime, .manga]
    }
    
    //The initial scope to start on
    var initialScope: Scope
    
...
        s.scopeButtonTitles = Scope.all.map { $0.rawValue }
        s.barTintColor = Theme.NavigationTheme().barColor
        s.tintColor = UIColor.white
        s.delegate = self
        s.showsCancelButton = true
        s.showsScopeBar = true
        s.placeholder = "Enter your search"
        
        //Change the tint color of the cursor
        for subView in s.subviews[0].subviews where subView is UITextField {
            subView.tintColor = Theme.Colors().secondary
        }
        
...
